--- a/usr.sbin/timed/timed/Makefile
+++ b/usr.sbin/timed/timed/Makefile
@@ -1,3 +1,5 @@
+#	$OpenBSD: src/usr.sbin/timed/timed/Attic/Makefile,v 1.6 2001/04/07 20:00:15 ho Exp $
+#
 #	@(#)Makefile	5.12 (Berkeley) 5/7/93
 #
 # optional flags are: MEASURE TESTING DEBUG
