--- a/usr.bin/skeyinfo/Makefile
+++ b/usr.bin/skeyinfo/Makefile
@@ -1,9 +1,9 @@
-#	$OpenBSD: src/usr.bin/skeyinfo/Makefile,v 1.2 1997/09/21 11:50:53 deraadt Exp $
+#	$OpenBSD: src/usr.bin/skeyinfo/Makefile,v 1.3 2001/06/17 22:44:50 millert Exp $
 
 PROG=	skeyinfo
+
 BINOWN=	root
-BINMODE=4555
-DPADD=	${LIBSKEY}
-LDADD=	-lskey
+BINGRP=	auth
+BINMODE=2555
 
 .include <bsd.prog.mk>
