--- a/share/man/man8/man8.i386/Makefile
+++ b/share/man/man8/man8.i386/Makefile
@@ -1,8 +1,8 @@
-#	$OpenBSD: src/share/man/man8/man8.i386/Makefile,v 1.5 2001/01/29 02:11:16 niklas Exp $
+#	$OpenBSD: src/share/man/man8/man8.i386/Makefile,v 1.6 2001/06/21 08:10:16 mpech Exp $
 #	$NetBSD: Makefile,v 1.5 1995/09/06 21:36:35 jtc Exp $
 
 MAN=	MAKEDEV.8 boot_i386.8
 MLINKS=	MAKEDEV.8 makedev.8
-MANSUBDIR=/i386
+MANSUBDIR=i386
 
 .include <bsd.prog.mk>
