--- a/share/man/man8/man8.mvme68k/Makefile
+++ b/share/man/man8/man8.mvme68k/Makefile
@@ -1,8 +1,8 @@
-#	$OpenBSD: src/share/man/man8/man8.mvme68k/Makefile,v 1.3 2001/01/29 02:11:17 niklas Exp $
+#	$OpenBSD: src/share/man/man8/man8.mvme68k/Makefile,v 1.4 2001/06/21 08:10:16 mpech Exp $
 #	$NetBSD: Makefile,v 1.3 1995/09/06 21:36:38 jtc Exp $
 
 #MAN=	MAKEDEV.8 boot_mvme68k.8
 #MLINKS=	MAKEDEV.8 makedev.8
-MANSUBDIR=/mvme68k
+MANSUBDIR=mvme68k
 
 .include <bsd.prog.mk>
