--- a/distrib/mac68k/ramdisk/mtree.conf
+++ b/distrib/mac68k/ramdisk/mtree.conf
@@ -1,5 +1,5 @@
 #
-#	$OpenBSD: src/distrib/mac68k/ramdisk/Attic/mtree.conf,v 1.1 1999/06/13 10:33:31 downsj Exp $
+#	$OpenBSD: src/distrib/mac68k/ramdisk/Attic/mtree.conf,v 1.2 2001/06/23 19:44:45 deraadt Exp $
 #	$NetBSD: mtree.conf,v 1.1 1995/07/18 04:13:24 briggs Exp $
 #
 
@@ -40,11 +40,6 @@ sbin
 # ./tmp
 tmp
 # ./tmp
-..
-
-# ./kern
-kern
-# ./kern
 ..
 
 # ./var
