--- a/kerberosV/usr.bin/Makefile
+++ b/kerberosV/usr.bin/Makefile
@@ -1,7 +1,7 @@
-# $OpenBSD: src/kerberosV/usr.bin/Makefile,v 1.4 2001/06/23 21:54:07 hin Exp $
+# $OpenBSD: src/kerberosV/usr.bin/Makefile,v 1.5 2001/06/24 05:45:47 hin Exp $
 
 # XXX asn1_compile is compiled in ../Makefile
 
-SUBDIR	=  kauth klist kdestroy kinit pagsh verify_krb5_conf
+SUBDIR	=  kauth klist kdestroy kinit pagsh verify_krb5_conf kf
 
 .include <bsd.subdir.mk>
