--- a/etc/nat.conf
+++ b/etc/nat.conf
@@ -1,4 +1,4 @@
-#	$OpenBSD: src/etc/Attic/pf.nat,v 1.1 2001/06/26 13:23:20 dhartmei Exp $
+#	$OpenBSD: src/etc/Attic/nat.conf,v 1.1 2001/06/26 16:52:39 kjell Exp $
 #
 # See pfctl(8) for syntax and examples
 #
