--- a/usr.bin/ssh/ssh-keygen/Makefile
+++ b/usr.bin/ssh/ssh-keygen/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: src/usr.bin/ssh/ssh-keygen/Makefile,v 1.19 2001/06/26 05:52:55 markus Exp $
+#	$OpenBSD: src/usr.bin/ssh/ssh-keygen/Makefile,v 1.20 2001/06/26 17:40:43 markus Exp $
 
 .PATH:		${.CURDIR}/..
 
@@ -16,3 +16,5 @@ SRCS=	ssh-keygen.c
 
 LDADD+=	-lcrypto
 DPADD+=	${LIBCRYPTO}
+
+#LDADD+=	-lsectok
