--- a/sbin/iopctl/Makefile
+++ b/sbin/iopctl/Makefile
@@ -1,6 +1,12 @@
-#	$OpenBSD: src/sbin/iopctl/Attic/Makefile,v 1.1.1.1 2001/07/05 02:07:46 mickey Exp $
+#	$OpenBSD: src/sbin/iopctl/Attic/Makefile,v 1.2 2001/07/05 02:14:38 mickey Exp $
 
-PROG=	iopctl
+.if (${MACHINE} == "i386") || (${MACHINE} == "powerpc") || \
+    (${MACHINE} == "alpha")
+PROG=   iopctl
+.else
+NOPROG=
+.endif
+
 MAN=	iopctl.8
 
 .include <bsd.prog.mk>
