--- a/libexec/ld.so/test/Makefile
+++ b/libexec/ld.so/test/Makefile
@@ -1,7 +1,7 @@
-#	$OpenBSD: src/libexec/ld.so/test/Attic/Makefile,v 1.6 2001/07/11 03:02:24 pvalchev Exp $
+#	$OpenBSD: src/libexec/ld.so/test/Attic/Makefile,v 1.7 2001/07/11 05:56:02 pvalchev Exp $
 
 DIR=/usr/src/libexec/ld.so/obj/ld.so
-#necssary to build the shared objects. not necessary for dltest but
+#necessary to build the shared objects. not necessary for dltest but
 #doesn't hurt
 CFLAGS += -fpic
 CFLAGS += -g
