--- a/usr.bin/tsort/Makefile
+++ b/usr.bin/tsort/Makefile
@@ -1,7 +1,7 @@
-#	$OpenBSD: src/usr.bin/tsort/Makefile,v 1.4 2001/04/18 17:57:27 espie Exp $
+#	$OpenBSD: src/usr.bin/tsort/Makefile,v 1.5 2001/07/19 10:20:01 espie Exp $
 
 PROG=	tsort
 
-CFLAGS+=-Wall -Wno-char-subscripts -Wstrict-prototypes -pedantic -W
+CDIAGFLAGS=-Wall -Wno-char-subscripts -Wstrict-prototypes -pedantic -W
 
 .include <bsd.prog.mk>
