Fix compilation on mvme88k (until binutils are ready).

--- a/gnu/usr.bin/gas/config/Makefile.m88k
+++ b/gnu/usr.bin/gas/config/Makefile.m88k
@@ -1,4 +1,4 @@
-#	$OpenBSD: src/gnu/usr.bin/gas/config/Attic/Makefile.mvme88k,v 1.2 1998/02/15 18:49:06 niklas Exp $
+#	$OpenBSD: src/gnu/usr.bin/gas/config/Attic/Makefile.m88k,v 1.1 2001/07/25 23:23:41 miod Exp $
 #	from: @(#)Makefile.hp300	6.1 (Berkeley) 3/3/91
 
 #CPPFLAGS+=	-DPIC
