--- a/share/man/man4/man4.powerpc/Makefile
+++ b/share/man/man4/man4.powerpc/Makefile
@@ -1,8 +1,8 @@
-#	$OpenBSD: src/share/man/man4/man4.powerpc/Attic/Makefile,v 1.3 2001/06/20 16:27:29 mpech Exp $
+#	$OpenBSD: src/share/man/man4/man4.powerpc/Attic/Makefile,v 1.4 2001/08/03 18:09:17 pvalchev Exp $
 #	from: @(#)Makefile	5.1 (Berkeley) 2/12/91
 #	Id: Makefile,v 1.4 1995/12/14 05:41:38 deraadt Exp $
 
-MAN=	com.4
+MAN=	com.4 intro.4
 
 MANSUBDIR=powerpc
 
