o OpenBSD tag o No longer need KRBDES define o Remove unneeded SRCS definition

--- a/usr.bin/x99token/Makefile
+++ b/usr.bin/x99token/Makefile
@@ -1,8 +1,6 @@
-#	BSDI $Id: Makefile,v 1.2 1996/08/26 19:49:56 prb Exp $
+#	$OpenBSD: src/usr.bin/x99token/Makefile,v 1.2 2001/08/14 00:56:58 millert Exp $
 
 PROG=	x99token
-SRCS=	x99token.c
-CFLAGS+=-DKRBDES
 LDADD+=	-ldes
 
 .include <bsd.prog.mk>
