--- a/sys/arch/sparc64/stand/Makefile
+++ b/sys/arch/sparc64/stand/Makefile
@@ -1,7 +1,7 @@
-#	$OpenBSD: src/sys/arch/sparc64/stand/Makefile,v 1.1 2001/08/18 16:19:28 jason Exp $
+#	$OpenBSD: src/sys/arch/sparc64/stand/Makefile,v 1.2 2001/08/18 16:26:37 jason Exp $
 
 .if ${MACHINE} == "sparc64"
-SUBDIR= bootblk libsa libkern libz
+SUBDIR= bootblk libsa libkern libz ofwboot
 .endif
 
 
