--- a/sys/arch/sparc64/stand/libkern/Makefile
+++ b/sys/arch/sparc64/stand/libkern/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: src/sys/arch/sparc64/stand/libkern/Attic/Makefile,v 1.1.1.1 2001/08/18 15:51:10 jason Exp $
+#	$OpenBSD: src/sys/arch/sparc64/stand/libkern/Attic/Makefile,v 1.2 2001/08/18 16:26:37 jason Exp $
 
 LIB=	kern
 
@@ -36,3 +36,5 @@ install:
 machine:
 	rm -f $@
 	ln -s ${.CURDIR}/../../include $@
+
+beforedepend: machine
