--- a/sys/arch/sparc64/stand/ofwboot/Makefile
+++ b/sys/arch/sparc64/stand/ofwboot/Makefile
@@ -1,3 +1,4 @@
+#	$OpenBSD: src/sys/arch/sparc64/stand/ofwboot/Makefile,v 1.2 2001/08/20 19:55:33 jason Exp $
 #	$NetBSD: Makefile,v 1.2 2001/03/04 14:50:05 mrg Exp $
 
 CURDIR=	${.CURDIR}
