--- a/sys/lib/libkern/arch/sparc64/Makefile.inc
+++ b/sys/lib/libkern/arch/sparc64/Makefile.inc
@@ -1,3 +1,4 @@
+#	$OpenBSD: src/sys/lib/libkern/arch/sparc64/Attic/Makefile.inc,v 1.3 2001/08/20 20:15:29 jason Exp $
 #	$NetBSD: Makefile.inc,v 1.4 2000/11/01 19:37:20 thorpej Exp $
 
 SRCS+=  __main.c \
